# Policy_Eval

./: .gitignore  README.md  policyeval.spec  pyproject.toml  requirements.txt
.github/workflows/: release.yml
src/policyeval/: cli.py  policy.py  schema.py
src/policyeval/scan/: sast.py
src/policyeval/scan/sast/: sast.py
