[project]
name = "policyeval"
version = "v0.4.0"
description = "Policy Evaluator CLI"
readme = "README.md"
authors = [
    { name = "Vicky", email = "Vicky@accuknox.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "jsonschema>=4.23.0"
]

[project.scripts]
policyeval = "policyeval.cli:app"